# hngram

./: .env.example  .gitignore  CLAUDE.md  COMMIT.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  justfile  process-compose.yml
.github/workflows/: deploy.yml
client/: .gitignore  CLAUDE.md  biome.json  bun.lockb  index.html  justfile  kubb.config.ts  package.json  rsbuild.config.ts  test.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: FeedbackBanner.tsx  QueryStatus.tsx
client/src/features/chart/: TimeSeriesChart.tsx  colors.ts  transforms.ts
client/src/features/query/: QueryControls.tsx  useQueryState.ts
client/src/lib/: client.ts
config/: launch-defaults.json  suggested-comparisons.json
docs/: PRD.md  RFC-001-tokenization.md  RFC-002-n-gram-generation.md  RFC-003-clickhouse.md  RFC-004-ingestion.md  RFC-005-backend.md  RFC-006-frontend.md  RFC-007-infra.md  RFC-007-optimizations.md  RFC-008-local-rust-dev.md  RFC-009-integration-testing.md  RFC-010-streaming-merge.md  RFC-010-watermark-ingestion.md  RFC-011-parallel-external-sort.md  RFC-012-partition-aware-output-ordering.md  dataset.md  design-decisions.md  google-ngram-viewer-features.md  google-ngram-viewer.md  n-gram-gradient.md  sizing-theory.md
docs/plans/: 2026-03-28-ingestion-optimizations-2.md  2026-03-28-ingestion-optimizations.md
loadtest/: README.md  fetch_phrases.sh  ngram.js
scripts/: init-secrets.sh
server/: Cargo.toml  Dockerfile  ingest.dev.toml  ingest.example.toml  ingest.full.toml  ingest.prod.toml  ingest.test.toml  ingestion.dev.toml  ingestion.example.toml  ingestion.prod.toml  ingestion.test.toml  justfile  openapi.json
server/crates/api/: Cargo.toml
server/crates/api/src/: lib.rs  main.rs
server/crates/clickhouse/: Cargo.toml
server/crates/clickhouse/src/: lib.rs
server/crates/ingest/: Cargo.toml
server/crates/ingest/src/: config.rs  download.rs  import.rs  main.rs  months.rs  parquet.rs  process.rs  vocabulary.rs
server/crates/ingestion/: Cargo.toml
server/crates/ingestion/src/: backfill.rs  config.rs  download.rs  import.rs  ingest.rs  main.rs  manifest.rs  months.rs  parquet.rs  process.rs  vocabulary.rs
server/crates/tokenizer/: Cargo.toml
server/crates/tokenizer/src/: counter.rs  lib.rs
server/etc/caddy/: Caddyfile  Dockerfile
server/etc/clickhouse/: config.prod.xml  config.xml  users.prod.xml  users.xml
server/etc/clickhouse/init/: 001-schema.sql  002-users.sh  003-users-ingest.sh
