[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jchook/hn-ngram"

[profile.dev.package.ingestion]
opt-level = 2

[profile.dev.package.tokenizer]
opt-level = 2

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8.8"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# ClickHouse
clickhouse = { version = "0.14", features = ["lz4", "time"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Internal crates
tokenizer = { path = "crates/tokenizer" }
hn-clickhouse = { path = "crates/clickhouse" }
