[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jchook/hn-ngram"

[profile.dev.package.ingest]
opt-level = 2

[profile.dev.package.tokenizer]
opt-level = 2

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8.8"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
# "rc" feature enables Serialize for Arc<T>, used by the API response cache.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# ClickHouse
clickhouse = { version = "0.14", features = ["lz4", "time"] }

# In-process LRU cache (API hot-path response cache)
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Internal crates
tokenizer = { path = "crates/tokenizer" }
hn-clickhouse = { path = "crates/clickhouse" }
