[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tokenizer.workspace = true
hn-clickhouse.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
