[package]
name = "ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
tokenizer.workspace = true
hn-clickhouse.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
chrono.workspace = true
